vendor/pin-project-1.0.7/tests/ui/unstable-features/overlapping_marker_traits.stderr
error[E0557]: feature has been removed
  --> $DIR/overlapping_marker_traits.rs:11:12
   |
11 | #![feature(overlapping_marker_traits)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ feature has been removed
   |
   = note: removed in favor of `#![feature(marker_trait_attr)]`

error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Struct<_>`
  --> $DIR/overlapping_marker_traits.rs:17:1
   |
17 | #[pin_project]
   | ^^^^^^^^^^^^^^ conflicting implementation for `Struct<_>`
...
24 | impl<T> Unpin for Struct<T> {}
   | --------------------------- first implementation here
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
